[package]
name = "clock_wayland"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { path = "../..", features = ["canvas", "tokio", "debug"] }
time = { version = "0.3.5", features = ["local-offset"] }
iced_native = { path = "../../native" }